--- a/TankiFoodAndTravel/Web.config
+++ b/TankiFoodAndTravel/Web.config
@@ -11,8 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TankiFoodAndTravel-20181120072257.mdf;Initial Catalog=aspnet-TankiFoodAndTravel-20181120072257;Integrated Security=True"
+    <add name="DefaultConnection1" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TankiFoodAndTravel-20181120072257.mdf;Initial Catalog=aspnet-TankiFoodAndTravel-20181120072257;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Persist Security Info=False;User ID=MyUser;password=pass@123;Initial Catalog=TANKDB;Data Source=(LocalDB)\MSSQLLocalDB;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
